# dice-game

./: .gitignore  LICENSE  README.md  dice-game.cabal
app/: Main.hs
src/: ConsolePlay.hs  DiceGame.hs  GameAI.hs  Main.hs
stresser/: Main.hs
test/: DiceGameSpec.hs  GameAISpec.hs  Spec.hs
