name:                dice-game
version:             0.1.0.0
synopsis:            A dice game, written in Haskell
description:         Please see README.md
homepage:            http://github.com/githubuser/dice-game#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Smith
maintainer:          mark.h.smith@gmail.com
copyright:           2010 Mark Smith
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable dice-game
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       vector
