name:                dice-game
version:             0.1.0.0
synopsis:            A dice game, written in Haskell
description:         Please see README.md
homepage:            http://github.com/githubuser/dice-game#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Smith
maintainer:          mark.h.smith@gmail.com
copyright:           2010 Mark Smith
category:            Game
build-type:          Simple
cabal-version:       >=1.10

flag documentation
  default: False

library
  if flag(documentation)
     build-depends: hscolour == 1.20.*
  exposed-modules:     DiceGame
                       , GameAI
                       , ConsolePlay
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , vector
                       , random
                       , MonadRandom
                       , MemoTrie
                       , containers
                       , pqueue
                       , safe
                       , mtl

executable dice-game
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , dice-game
                       , vector
                       , mtl

executable stress
  hs-source-dirs:      stresser
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , dice-game
                       , mtl

test-suite dice-game-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:       base
                     , hspec
                     , dice-game
                     , vector
                     , containers
                     , mtl

